Fixed Overlap Issue
-Added x-index:10 to styles.css

--- a/website/resources/css/styles.css
+++ b/website/resources/css/styles.css
@@ -40,7 +40,8 @@ header
     position: fixed;
     top: 0;
     vertical-align: middle;
-    width: 100%;
+	width: 100%;
+	z-index: 10;
 }
 #header_home {
 	height: 125px;
